--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -1,1 +1,17 @@
-{}
+{
+  "Breakfast": "Morgen",
+  "Lunch": "Mittag",
+  "Dinner": "Abend",
+  "Cancel": "Abbrechen",
+  "Save": "Speichern",
+  "Meal": "Mahlzeit",
+  "Date": "Datum",
+  "Notes": "Notiz",
+  "Duplicate Meal Message": "Es wurde bereits eine Mahlzeit mit diesem Datum und Tageszeit gespeichert.",
+  "Idea List \uD83C\uDF7D️": "Mahlzeit Ideen \uD83C\uDF7D️",
+  "Mealplan": "Essensplan",
+  "Edit Meal": "Mahlzeit bearbeiten",
+  "Plan Meal": "Mahlzeit einplanen"
+
+
+}
