Add URL to database, changed Buttons design

--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -12,7 +12,8 @@
   "Mealplan": "Essensplan",
   "Edit Meal": "Mahlzeit bearbeiten",
   "Plan Meal": "Mahlzeit einplanen",
-  "Link to recipe": "Link zum Rezept"
+  "Link to recipe": "Link zum Rezept",
+  "Copy from Clipboard": "Aus Zwischenablage einfügen"
 
 
 
