--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -12,7 +12,8 @@
   "Mealplan": "Mealplan",
   "Edit Meal": "Edit Meal",
   "Plan Meal": "Plan Meal",
-  "Link to recipe": "Link to recipe"
+  "Link to recipe": "Link to recipe",
+  "Copy from Clipboard": "Copy from Clipboard"
 
 
 
