Working Idea Suggestion

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -13,7 +13,10 @@
   "Edit Meal": "Edit Meal",
   "Plan Meal": "Plan Meal",
   "Link to recipe": "Link to recipe",
-  "Copy from Clipboard": "Copy from Clipboard"
+  "Copy from Clipboard": "Copy from Clipboard",
+  "Categories": "Categories",
+  "Category": "Category",
+  "Category Name": "Category Name"
 
 
 
