--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -13,7 +13,10 @@
   "Edit Meal": "Mahlzeit bearbeiten",
   "Plan Meal": "Mahlzeit einplanen",
   "Link to recipe": "Link zum Rezept",
-  "Copy from Clipboard": "Aus Zwischenablage einfügen"
+  "Copy from Clipboard": "Aus Zwischenablage einfügen",
+  "Categories": "Kategorien",
+  "Category": "Kategorie",
+  "Category Name": "Name Kategorie"
 
 
 
