Save Category to DB

--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -16,7 +16,8 @@
   "Copy from Clipboard": "Aus Zwischenablage einfügen",
   "Categories": "Kategorien",
   "Category": "Kategorie",
-  "Category Name": "Name Kategorie"
+  "Category Name": "Name Kategorie",
+  "Please add a name": "Name muss gefüllt sein"
 
 
 
