--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -16,7 +16,8 @@
   "Copy from Clipboard": "Copy from Clipboard",
   "Categories": "Categories",
   "Category": "Category",
-  "Category Name": "Category Name"
+  "Category Name": "Category Name",
+  "Please add a name": "Please add a name"
 
 
 
