--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -16,8 +16,10 @@
   "Copy from Clipboard": "Aus Zwischenablage einfügen",
   "Categories": "Kategorien",
   "Category": "Kategorie",
-  "Category Name": "Name Kategorie",
-  "Please add a name": "Name muss gefüllt sein"
+  "Category Name": "Kategorie",
+  "Please add a name": "Name muss gefüllt sein",
+  "All": "Alle",
+  "No category": "Keine Kategorie"
 
 
 
