--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -17,7 +17,9 @@
   "Categories": "Categories",
   "Category": "Category",
   "Category Name": "Category Name",
-  "Please add a name": "Please add a name"
+  "Please add a name": "Please add a name",
+  "All": "all",
+  "No category": "No category"
 
 
 
