--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -19,7 +19,13 @@
   "Category Name": "Category Name",
   "Please add a name": "Please add a name",
   "All": "all",
-  "No category": "No category"
+  "No category": "No category",
+  "First Day in Plan is current Day": "First Day in Plan is current Day",
+  "Always Current Day": "Always Current Day",
+  "Set your first Day of the week": "Set your first Day of the week for the plan",
+  "Settings": "Settings",
+  "Do you really want to delete this meal?": "Do you really want to delete this meal for this day?",
+  "Delete": "Delete"
 
 
 
