Change first Day of Week Dialog on Delete Meal Sort Lists alphabetical

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -25,7 +25,8 @@
   "Set your first Day of the week": "Set your first Day of the week for the plan",
   "Settings": "Settings",
   "Do you really want to delete this meal?": "Do you really want to delete this meal for this day?",
-  "Delete": "Delete"
+  "Delete": "Delete",
+  "Sort Lists in alphabetical order": "Sort Lists in alphabetical order"
 
 
 
