--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -25,7 +25,8 @@
   "Set your first Day of the week": "Wähle den ersten Tag der Woche für den Plan",
   "Settings": "Einstellungen",
   "Do you really want to delete this meal?": "Soll diese Mahlzeit an diesem Tag wirklich gelöscht werden?",
-  "Delete": "Löschen"
+  "Delete": "Löschen",
+  "Sort Lists in alphabetical order": "Listen in alphabetischer Reihenfolge ordnen"
 
 
 
