Added Settings, not finished

--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -26,7 +26,9 @@
   "Settings": "Einstellungen",
   "Do you really want to delete this meal?": "Soll diese Mahlzeit an diesem Tag wirklich gelöscht werden?",
   "Delete": "Löschen",
-  "Sort Lists in alphabetical order": "Listen in alphabetischer Reihenfolge ordnen"
+  "Sort Lists in alphabetical order": "Listen in alphabetischer Reihenfolge ordnen",
+  "Snack": "Snack",
+  "Meals to show": "Sichtbare Mahlzeiten"
 
 
 
