--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -26,7 +26,9 @@
   "Settings": "Settings",
   "Do you really want to delete this meal?": "Do you really want to delete this meal for this day?",
   "Delete": "Delete",
-  "Sort Lists in alphabetical order": "Sort Lists in alphabetical order"
+  "Sort Lists in alphabetical order": "Sort Lists in alphabetical order",
+  "Snack": "Snack",
+  "Meals to show": "Meals to show"
 
 
 
