fixed Translation, fixed Link opening

--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -28,7 +28,9 @@
   "Delete": "Löschen",
   "Sort Lists in alphabetical order": "Listen in alphabetischer Reihenfolge ordnen",
   "Snack": "Snack",
-  "Meals to show": "Sichtbare Mahlzeiten"
+  "Meals to show": "Sichtbare Mahlzeiten",
+  "Meal planner": "Meal Planer",
+  "Chose meals to show": "Mahzeiten zur Anzeige auswählen"
 
 
 
