--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -28,7 +28,9 @@
   "Delete": "Delete",
   "Sort Lists in alphabetical order": "Sort Lists in alphabetical order",
   "Snack": "Snack",
-  "Meals to show": "Meals to show"
+  "Meals to show": "Meals to show",
+  "Meal planner": "Meal Planner",
+  "Chose meals to show": "Chose meals to show"
 
 
 
