--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -30,7 +30,8 @@
   "Snack": "Snack",
   "Meals to show": "Sichtbare Mahlzeiten",
   "Meal planner": "Meal Planer",
-  "Chose meals to show": "Mahzeiten zur Anzeige auswählen"
+  "Chose meals to show": "Mahzeiten zur Anzeige auswählen",
+  "buy-premium-text": "• Teile deinen Plan mit Freunden und Familie \n• Editiert einen Plan gemeinsam (jeder Benutzer braucht Premium) \n• Online synchronisation \n• Einmalige Kosten, kein Abo \n• Die Mahlzeitideen bleiben separat \n• Du startest mit einem neuen, leeren Plan\n• Nach dem Kauf ist ein Login nötig"
 
 
 
