--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -30,7 +30,8 @@
   "Snack": "Snack",
   "Meals to show": "Meals to show",
   "Meal planner": "Meal Planner",
-  "Chose meals to show": "Chose meals to show"
+  "Chose meals to show": "Chose meals to show",
+  "buy-premium-text": "• Share your meal plan with family and friends \n• Edit the same meal plan together (every member needs premium) \n• Online sync \n• One time cost, no subscription \n• You keep your meal ideas seperate \n• You start with a new, empty meal plan\n• Login after purchase needed"
 
 
 
